syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.acme.inventory.model";
option java_outer_classname = "inventoryProtos";

package inventory;

message InsertCarRequest {
  string licence_plate_number = 1;
  string manufacturer = 2;
  string model = 3;
}

message RemoveCarRequest {
  string licence_plate_number = 1;
}

message CarResponse {
  string licence_plate_number = 1;
  string manufacturer = 2;
  string model = 3;
  int64 id = 4;
}

service InventoryService {
  rpc add(InsertCarRequest) returns (CarResponse) {}
  rpc remove(RemoveCarRequest) returns (CarResponse) {}
  rpc addMulti(stream InsertCarRequest) returns (stream CarResponse) {}
}
